--- a/ios/isOpen/Info.plist
+++ b/ios/isOpen/Info.plist
@@ -33,10 +33,15 @@
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
 			</dict>
+			<!-- EKLENEN KOD BAŞLANGIÇ -->
+			<key>NSLocationWhenInUseUsageDescription</key>
+			<string>This app needs access to your location to provide nearby services.</string>
+			<!-- iOS 10 ve daha eski sürümleri destekliyorsanız aşağıdaki kodu da ekleyin -->
+			<key>NSLocationAlwaysUsageDescription</key>
+			<string>This app needs access to your location at all times to provide full functionality.</string>
+			<!-- EKLENEN KOD BİTİŞ -->
 		</dict>
 	</dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
