--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "lottie-react-native": "^5.1.5",
     "react": "18.2.0",
@@ -30,6 +31,8 @@
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.9.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "toggle-switch-react-native": "^3.3.0"
   },
   "devDependencies": {
