--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "svgr": "svgr ./src/assets/icons -d ./src/components/icons --native --icon"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-community/geolocation": "^3.0.6",
     "@react-native-community/slider": "^4.4.2",
     "@react-native-masked-view/masked-view": "^0.2.9",
@@ -33,6 +34,7 @@
     "react-native-svg": "^13.9.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "toggle-switch-react-native": "^3.3.0"
   },
   "devDependencies": {
