--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "geolib": "^3.3.3",
     "lottie-react-native": "^5.1.5",
     "react": "18.2.0",
     "react-native": "0.71.7",
